--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,8 @@
-<h1>Project: The Facebook</h1>
-<h2>By Corey Nagel, Matt Binsfeld, and Jordan Tsiao</h2>
+<div style="background-color:#234599;">
+	<h1 style="color:white;">Project: The Facebook</h1>
+	<h2 style="color:white;">By Corey Nagel, Matt Binsfeld, and Jordan Tsiao</h2>
 
-<% if signed_in? %>
-	<%= link_to "Sign out", signout_path, method: "delete" %>
-<% end %>
+	<% if signed_in? %>
+		<%= link_to "Sign out", signout_path, method: "delete" %>
+	<% end %>
+</div>
