--- a/app/views/static_pages/_signed_in_home.html.erb
+++ b/app/views/static_pages/_signed_in_home.html.erb
@@ -1,4 +1,4 @@
 <div class="row">
-  <h3> Welcome <%= current_user.name %></h3>
+  <h3> Welcome <%= current_user.first_name + current_user.last_name %></h3>
   </div>
 </div>
