--- a/app/views/static_pages/_signed_out_home.html.erb
+++ b/app/views/static_pages/_signed_out_home.html.erb
@@ -1,8 +1,9 @@
 <% provide(:title, "Sign in") %>
-<h1>Sign in</h1>
+<div class="row"> </div>
 
 <div class="row">
-  <div class="span6 offset3">
+  <h1>Sign In</h1>
+  <div class="span5 offset3">
     <%= form_for(:session, url: sessions_path) do |f| %>
 
       <%= f.label :email %>
@@ -11,7 +12,7 @@
       <%= f.label :password %>
       <%= f.password_field :password %>
 
-      <%= f.submit "Sign in", class: "btn btn-large btn-primary" %>
+      <%= f.submit "Sign in", class: "btn btn-primary" %>
     <% end %>
 
     <p>New user? <%= link_to "Join us!", signup_path %></p>
