new css fixes, more stuff coming

--- a/app/views/static_pages/_signed_in_home.html.erb
+++ b/app/views/static_pages/_signed_in_home.html.erb
@@ -1,4 +1,11 @@
+
+<h3> Welcome <%= current_user.first_name + " " + current_user.last_name %></h3>
 <div class="row">
-  <h3> Welcome <%= current_user.first_name + " " + current_user.last_name %></h3>
+  <div class="span4 offset2">
+    blahblahblah
   </div>
-</div>
+  <div class="span6">
+          blahblahblah
+  </div>
+
+ </div>
