--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -12,7 +12,38 @@ html {
 }
 
 body {
-  padding-top: 60px;
+  margin-top:0%;
+  margin-left:auto;
+  margin-right:auto;
+  width:100%;
+}
+
+.header-custom {
+  margin-top:3.5%;
+  background-color: black;
+}
+
+.title {
+  padding-top:10px;
+  margin-left:auto;
+  margin-right:auto;
+  background-color:#1045ff;
+  clear:both;
+  height:100px;
+  h1 {
+    font-size: 3em;
+    letter-spacing: -2px;
+    text-align: center;
+    color:white;
+    a {
+      color:white;
+    }
+    a:hover {
+      color:black;
+      background-color:#1045ff;
+      text-decoration: none;
+    }
+  }
 }
 
 .navbar-custom {
@@ -31,22 +62,33 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1;
 }
 
+
+
 h1 {
   font-size: 3em;
   letter-spacing: -2px;
-  margin-bottom: 30px;
   margin-left:-5%;
   text-align: center;
+  color:black;
+  a {
+    color:white;
+  }
+
 }
 
 h2 {
   font-size: 1.7em;
   letter-spacing: -1px;
+  margin-left:-5%;
   margin-bottom: 30px;
-  text-align: left;
+  text-align: center;
   font-weight: normal;
   color: white;
-  background-color:#234599;
+
+}
+
+h3 {
+  text-align:center;
 }
 
 p {
