more layout stuff for show user and signed_in_home

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
           <li>
 
             <form class="navbar-search pull-left">
-            <input type="text" class="search-query" placeholder="Search">
+            <input type="text" class="search-query" placeholder="Search People">
             </form>
 
           </li>
