--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -54,9 +54,7 @@ section {
   overflow: auto;
 }
 
-textarea {
-  resize: vertical;
-}
+
 
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
@@ -98,7 +96,7 @@ p {
 
 .navbar-custom {
   height:100px;
-          margin-top:0;
+  margin-top:0;
 }
 
 #logo {
@@ -125,6 +123,7 @@ input, textarea, select, .uneditable-input {
   width: 100%;
   padding: 10px;
   margin-bottom: 15px;
+  margin-top:10px;
   @include box_sizing;
 }
 
@@ -143,4 +142,13 @@ input {
 .field_with_errors {
   @extend .control-group;
   @extend .error;
+}
+
+.field {
+  height:100px;
+}
+
+textarea {
+  height: 100px;
+
 }
