--- a/app/views/static_pages/_signed_in_home.html.erb
+++ b/app/views/static_pages/_signed_in_home.html.erb
@@ -1,11 +1,21 @@
 
-<h3> Welcome <%= current_user.first_name + " " + current_user.last_name %></h3>
+
 <div class="row">
-  <div class="span4 offset2">
+  <aside>
+  <div class="span4">
+    <h3> Welcome <%= current_user.first_name %></h3>
     blahblahblah
   </div>
-  <div class="span6">
-          blahblahblah
+  </aside>
+  <div class="span7 offset1">
+          <%= render 'shared/status_update' %>
+    <section>
+      <h3>
+        NewsFeed
+      </h3>
+      <hr>
+      news will go here
+    </section>
   </div>
 
  </div>
