--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,39 @@
-<h3>Hi <%= @user.first_name %></h3>
+
+<% provide(:title, @user.name) %>
+<div class="row">
+  <aside class="span4">
+    <section>
+      <h3>
+        <%= @user.name %>
+      </h3>
+      <hr>
+      <p>
+        profile info will go here
+      </p>
+    </section>
+    <section>
+      <h3>Mutual Friends</h3>
+      <hr>
+      mutual friends go here
+    </section>
+    <section>
+      <h3><%= "#{@user.first_name}'s friends" %>   </h3>
+      <hr>
+      users friends go here
+    </section>
+
+  </aside>
+  <div class="span7 offset1">
+
+     <%= render '/shared/post_to_wall' %>
+    <hr>
+    Wall goes here
+     <% if @user.microposts.any? %>
+        <h3>Microposts (<%= @user.microposts.count %>)</h3>
+        <ol class="microposts">
+          <%= render @microposts %>
+        </ol>
+        <%= will_paginate @microposts %>
+     <% end %>
+  </div>
+</div>
