--- a/app/views/shared/_status_update.html.erb
+++ b/app/views/shared/_status_update.html.erb
@@ -1,7 +1,9 @@
+<% if signed_in? %>
 <%= form_for(@micropost) do |f| %>
     <%= render 'shared/error_messages', object: f.object %>
     <div class="field">
       <%= f.text_area :content, placeholder: "Update your status..." %>
     </div>
     <%= f.submit "Post", class: "btn btn-primary" %>
+<% end %>
 <% end %>
