--- a/app/views/shared/_post_to_wall.html.erb
+++ b/app/views/shared/_post_to_wall.html.erb
@@ -3,5 +3,6 @@
     <div class="field">
       <%= f.text_area :content, placeholder: "Post on #{@user.name}'s wall..." %>
     </div>
+      <%= f.hidden_field :wall_id, value: @user.wall.id %>
     <%= f.submit "Post", class: "btn btn-primary" %>
 <% end %>
