--- a/app/views/shared/_status_update.html.erb
+++ b/app/views/shared/_status_update.html.erb
@@ -4,6 +4,7 @@
     <div class="field">
       <%= f.text_area :content, placeholder: "Update your status..." %>
     </div>
+        <%= f.hidden_field :wall_id, value: current_user.wall.id %>
     <%= f.submit "Post", class: "btn btn-primary" %>
 <% end %>
 <% end %>
