--- a/app/views/static_pages/_signed_in_home.html.erb
+++ b/app/views/static_pages/_signed_in_home.html.erb
@@ -23,6 +23,12 @@
       </h3>
       <hr>
       news will go here
+      <% if @user.microposts.any? %>
+          <h3>Microposts (<%= current_user..microposts.count %>)</h3>
+          <ol class="microposts">
+            <%= render @microposts %>
+          </ol>
+      <% end %>
     </section>
   </div>
 
