--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,7 +29,7 @@
     <hr>
     Wall goes here
      <% if @user.microposts.any? %>
-        <h3>Microposts (<%= @user.microposts.count %>)</h3>
+        <h3>Microposts (<%= @user.wall.microposts.count %>)</h3>
         <ol class="microposts">
           <%= render @microposts %>
         </ol>
