--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -121,8 +121,8 @@ p {
 input, textarea, select, .uneditable-input {
   border: 1px solid #bbb;
   width: 100%;
-  padding: 10px;
-  margin-bottom: 15px;
+  padding: 1%;
+  margin-bottom: 10px;
   margin-top:10px;
   @include box_sizing;
 }
@@ -150,5 +150,20 @@ input {
 
 textarea {
   height: 100px;
+  margin-bottom:5%;
 
+}
+
+span .author {
+  text-decoration: bold;
+}
+
+.microposts {
+  list-style: none;
+  margin: 10px 0 0 0;
+  li {
+    padding: 0 0;
+    border-top: 1px solid #e8e8e8;
+
+  }
 }
