--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -4,15 +4,15 @@
         on <%= micropost.wall.user.name %>'s wall
     <% end  %>
   </h5>
-  <p>
   <span class="content"><%= micropost.content %></span>
-  <span class="timestamp pull-right">
+
+  <div>
+    <%= link_to "Comments", micropost_path(micropost) %>
+    <% if current_user?(micropost.user) %>
+        <%= render 'shared/delete_micropost', object: micropost %>
+    <% end %>
+    <span class="timestamp pull-right">
     Posted <%= time_ago_in_words(micropost.created_at) %> ago.
-
-  <% if current_user?(micropost.user) %>
-      <%= render 'shared/delete_micropost', object: micropost %>
-  <% end %>
-      </span>
-  </p>
-
+   </span>
+  </div>
 </li>
