--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -1,7 +1,20 @@
+<div class="row">
 <p id="notice"><%= notice %></p>
+<div class="span4 ">
+<h3 class="author"><%= @micropost.user.name + " posted " %>
+  <% if not @micropost.user == @micropost.wall.user %>
+      on <%= @micropost.wall.user.name %>'s wall
+  <% end  %>
+</h3>
+<%= @micropost.content %>
+  <hr>
 
-<%= render @micropost %>
+  <% if current_user?(@micropost.user) %>
+      <%= link_to 'Edit', edit_micropost_path(@micropost) %>
+      <%= render 'shared/delete_micropost', object: @micropost %>
+  <% end %>
+</div>
+<div class="span7">
 <h3>Comments on this Post</h3>
-
-<%= link_to 'Edit', edit_micropost_path(@micropost) %> |
-<%= link_to 'Back', microposts_path %>
+</div>
+</div>
