--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -21,6 +21,7 @@ body {
 .header-custom {
   margin-top:3.5%;
   background-color: black;
+  margin-bottom:25px;
 }
 
 .title {
@@ -87,6 +88,8 @@ h2 {
 
 h3 {
   text-align:center;
+  margin-bottom:10px;
+  margin-top:10px;
 }
 
 p {
@@ -122,7 +125,7 @@ input, textarea, select, .uneditable-input {
   border: 1px solid #bbb;
   width: 100%;
   padding: 1%;
-  margin-bottom: 10px;
+
   margin-top:10px;
   @include box_sizing;
 }
@@ -146,9 +149,10 @@ input {
 
 .field {
   height:100px;
+  margin-bottom:10px;
 }
 
-textarea {
+.post-box {
   height: 100px;
   margin-bottom:5%;
 
@@ -158,12 +162,17 @@ span .author {
   text-decoration: bold;
 }
 
-.microposts {
+.microposts, .friends {
   list-style: none;
   margin: 10px 0 0 0;
   li {
     padding: 0 0;
     border-top: 1px solid #e8e8e8;
-
   }
 }
+
+hr {
+  margin-top:10px;
+  margin-bottom:10px;
+}
+
