--- a/app/views/shared/_post_to_wall.html.erb
+++ b/app/views/shared/_post_to_wall.html.erb
@@ -1,11 +1,8 @@
 <%= form_for(@micropost) do |f| %>
     <%= render 'shared/error_messages', object: f.object %>
     <div class="field">
-      <%= f.text_area :content, placeholder: "Post on #{@user.name}'s wall...", class: "post-box" %>
+      <%= f.text_area :content, placeholder: "Post on #{@user.name}'s wall..." %>
       <%= f.hidden_field :wall_id, value: @user.wall.id %>
     </div>
-
-    <div>
       <%= f.submit "Post", class: "btn btn-primary" %>
-    </div>
 <% end %>
