--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,23 +46,7 @@
       </aside>
       <div class="span7 offset1">
         <%= render '/shared/post_to_wall' %>
-        <h3>
-          <%= if current_user == @user
-                "Your "
-              else
-                "#{@user.first_name}'s "
-              end
-          %>
-          Wall
-        </h3>
-        <hr>
-        <% if @user.wall.microposts.any? %>
-          <ul class="microposts">
-            <%= render @microposts %>
-          </ul>
-        <% else %>
-          There are no posts on your wall
-        <% end %>
+        <%= render '/shared/wall' %>
       </div>
     </div>
 <% elsif current_user.outgoing_pending_friends.include?(@user) %>
