--- a/app/views/shared/_request_friend.html.erb
+++ b/app/views/shared/_request_friend.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "Request Friend", friend_request_user_path(@user) %>
+<%= link_to "Request Friend", friend_request_user_path(@user), class:"btn btn-primary btn-mini" %>
