--- a/app/views/static_pages/_signed_in_home.html.erb
+++ b/app/views/static_pages/_signed_in_home.html.erb
@@ -9,9 +9,9 @@
         blahblahblah
       </div>
       <div>
-        <h3>Friends</h3>
+        <h3>Your Friends</h3>
         <hr>
-        youre friend list will go here
+        your friend list will go here
       </div>
     </div>
   </aside>
