--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,1 +1,41 @@
+<div class="row">
+    <aside class="span4">
+      <section>
+        <h3>
+          Friend Requests
+        </h3>
+        <hr>
+        <% if @incoming %>
+            <% @incoming.each do |i| %>
+            <h4>
+              <%= i.name %>
+            </h4>
+            <%= render 'shared/accept_friend', object:i %>
+            <%= render 'shared/deny_friend', object:i %>
+            <% end %>
+        <% end %>
+      </section>
+      <section>
+        <h3>
+          Your Friends
+        </h3>
+        <hr>
+        <% if @friends %>
+            <% @friends.each do |f|%>
+                <h4 class="row">
+                  <%= link_to f.name, user_path(f)%>
+                  <%= render 'shared/unfriend', object:f %>
+                </h4>
+            <% end %>
+        <% end %>
+      </section>
+    </aside>
 
+    <div class="span7">
+      <h3>
+        Update Profile
+      </h3>
+      <hr>
+
+    </div>
+</div>
