more friends and comments stuff

--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -3,14 +3,15 @@
     <% if not micropost.user == micropost.wall.user %>
         on <%= micropost.wall.user.name %>'s wall
     <% end  %>
+    <% if current_user?(micropost.user) %>
+        <%= render 'shared/delete_micropost', object: micropost %>
+    <% end %>
   </h5>
   <span class="content"><%= micropost.content %></span>
 
   <div>
-    <%= link_to "Comments", micropost_path(micropost) %>
-    <% if current_user?(micropost.user) %>
-        <%= render 'shared/delete_micropost', object: micropost %>
-    <% end %>
+    <%= link_to "Comments (#{micropost.comments.count})", micropost_path(micropost) %>
+
     <span class="timestamp pull-right">
     Posted <%= time_ago_in_words(micropost.created_at) %> ago.
    </span>
