--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -161,12 +161,12 @@ span .author {
   text-decoration: bold;
 }
 
-.microposts, .friends {
+.microposts,.comments, .friends {
   list-style: none;
-  margin: 10px 0 0 0;
+  margin: 10px 0 5px 0;
   li {
     padding: 0 0;
-    border-top: 1px solid #e8e8e8;
+    border-bottom: 1px solid #e8e8e8;
   }
 }
 
@@ -182,4 +182,9 @@ hr {
 
 a {
   color:#1088ff;
+}
+
+.content {
+  display: block;
+  overflow: hidden;
 }
