--- a/app/views/microposts/_delete_comment.html.erb
+++ b/app/views/microposts/_delete_comment.html.erb
@@ -1,5 +1,5 @@
-% if current_user?(object.user) %>
-<%= link_to "delete", object, method: :delete,
+<% if current_user?(object.user) %>
+<%= link_to "delete", [@micropost,object], class: "btn btn-danger btn-mini pull-right", method: :delete,
             data: { confirm: "You sure?" },
             title: object.content %>
 <% end %>
