--- a/app/views/microposts/_post_comment.html.erb
+++ b/app/views/microposts/_post_comment.html.erb
@@ -1,8 +1,8 @@
-<%= form_for(@comment) do |f| %>
+<%= form_for([@micropost, @comment]) do |f| %>
     <%= render 'shared/error_messages', object: f.object %>
     <div class="field">
       <%= f.text_area :content, placeholder: "Post a comment..." %>
-
+      <%= f.hidden_field :user_id, value: current_user.id %>
     </div>
     <%= f.submit "Post", class: "btn btn-primary" %>
 <% end %>
