--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -35,10 +35,6 @@
     </aside>
 
     <div class="span7">
-      <h3>
-        Update Profile
-      </h3>
-      <hr>
-
+      <%= render 'users/edit_profile' %>
     </div>
 </div>
