--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,9 +6,12 @@
         <ul class="nav pull-left">
           <li class="span1"></li>
           <li>
-            <form class="navbar-search pull-left">
-            <input type="text" class="search-query" placeholder="Search People">
-            </form>
+            <%= form_tag search_path, :method => 'get', class: "navbar-search pull-left" do %>
+                <p>
+                  <%= text_field_tag :search, params[:search], placeholder: "Search People" ,class:"search-query" %>
+                  <%= submit_tag "Search", :name => nil, class: "btn btn-primary btn-mini header-search"%>
+                </p>
+            <% end %>
           </li>
         </ul>
        <ul class="nav pull-right">
@@ -28,4 +31,6 @@
     <h1><%= link_to "Project: The Facebook", root_path %></h1>
     <h2 >By Corey Nagel, Matt Binsfeld, and Jordan Tsiao</h2>
   </div>
-</div>
+  </div>
+
+
