--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,10 +1,10 @@
 <div class="row" >
   <aside class="span4">
-    <h3>Search</h3>
+    <h3>Search People by Last Name</h3>
     <hr>
     <%= form_tag search_path, :method => 'get' do %>
         <p>
-          <%= text_field_tag :search, params[:search] %>
+          <%= text_field_tag :search, params[:search], placeholder: "Search by Last Name" %>
           <%= submit_tag "Search", :name => nil, class: "btn btn-primary btn-mini" %>
         </p>
     <% end %>
