--- a/app/views/static_pages/_signed_in_home.html.erb
+++ b/app/views/static_pages/_signed_in_home.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
   <aside class="span4">
-      <div>
+      <section>
         <h3> Welcome <%= current_user.first_name %></h3>
         <hr>
         <% if current_user.incoming_pending_friends.any? %>
@@ -12,18 +12,8 @@
         <% else %>
             No news today!
         <% end %>
-      </div>
-      <section>
-        <h3>Your Friends</h3>
-        <hr>
-        <% if current_user.friends.any? %>
-          <% current_user.friends.sort_by(&:first_name).each do |f|%>
-          <h4>
-            <%= link_to f.name, user_path(f) %>
-          </h4>
-          <% end %>
-        <% end %>
       </section>
+      <%= render 'shared/list_friends' %>
   </aside>
   <div class="span7 offset1">
       <%= render 'shared/status_update' %>
