--- a/app/views/users/_friend_show.html.erb
+++ b/app/views/users/_friend_show.html.erb
@@ -22,22 +22,7 @@
           <% end %>
       <% end %>
     </section>
-    <section>
-      <h3><% if current_user != @user %>
-            <%= "#{@user.first_name}'s friends" %>
-        <% else %>
-            Your Friends
-        <% end %>
-      </h3>
-      <hr>
-      <% if @user.friends.any? %>
-          <% @user.friends.sort_by(&:first_name).each do |f|%>
-              <h4>
-                <%= link_to f.name, user_path(f) %>
-              </h4>
-          <% end %>
-      <% end %>
-    </section>
+    <%= render 'shared/list_friends' %>
 
   </aside>
   <div class="span7 offset1">
