--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -1,6 +1,6 @@
 <div class="row" >
   <aside class="span4">
-    <h3>Search People by Last Name</h3>
+    <h3>Search People</h3>
     <hr>
     <%= form_tag search_path, :method => 'get' do %>
         <p>
@@ -10,7 +10,7 @@
     <% end %>
   </aside>
   <div class="span7 offset1">
-    <h3>Search Results for: <%= @last_search %></h3>
+    <h3>Search Results for: <%= @search %></h3>
     <hr>
     <% if not @users.nil? %>
         <% @users.each do |f|%>
