update user settings now working

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -102,7 +102,7 @@ h4 {
 h3 {
   text-align:center;
   margin-bottom:10px;
-  margin-top:10px;
+  margin-top:15px;
 
 }
 
@@ -215,4 +215,8 @@ a {
 
 .header-search {
   display:none;
+}
+
+.clear-wall {
+  text-align:center;
 }
