--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -22,7 +22,7 @@
       <%= render 'shared/list_friends' %>
     </aside>
 
-    <div class="span7">
+    <div class="span7 offset1">
       <%= render 'users/edit_profile' %>
     </div>
 </div>
