--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,7 @@
           </li>
         </ul>
        <ul class="nav pull-right">
-
+             <li><%= link_to "Newsfeed", root_path %></li>
              <li><%= link_to "Profile", user_path(current_user) %></li>
              <li><%= link_to "Preferences", edit_user_path(current_user) %></li>
              <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
