--- a/app/views/users/_profile.html.erb
+++ b/app/views/users/_profile.html.erb
@@ -1,6 +1,6 @@
 
-
-<% if !@profile.hometown.nil? %>
+<% if @profile.filled_out %>
+<% if !@profile.hometown.empty? %>
   <b>Hometown: </b><%= @profile.hometown %>
   <br>
 <% end %>
@@ -9,18 +9,26 @@
   <br>
 <% end %>
 
-<% if !@profile.education.nil? %>
+<% if !@profile.education.empty? %>
   <b>School: </b><%= @profile.education %>
   <br>
 <% end %>
-<% if !@profile.work.nil? %>
+<% if !@profile.work.empty? %>
   <b>Work: </b><%= @profile.work %>
   <br>
 <% end %>
-<% if !@profile.quote.nil? %>
+<% if @profile.quote.length > 2 %>
     <b>Personal Quote: </b><%= @profile.quote%>
     <br>
 <% end %>
-<% if !@profile.interests.nil? %>
+<% if !@profile.interests.empty? %>
     <b>Interests: </b><%= @profile.interests %>
+<% end %>
+
+<% else %>
+No Profile Created Yet
+    <br>
+    <% if @user == current_user %>
+        Fill out your Profile <%= link_to "HERE!", edit_user_path(@user) %>
+    <% end %>
 <% end %>
