--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -174,6 +174,8 @@ span .author {
   list-style: none;
   margin: 10px 0 5px 0;
   li {
+    clear:both;
+    min-height: 70px;
     padding: 0 0;
     border-bottom: 1px solid #e8e8e8;
   }
@@ -219,4 +221,33 @@ a {
 .date-field {
   width:55px;
   border: 1px solid #1088dd;
+}
+
+.like {
+  margin-left:10px;
+  margin-right:10px;
+  float:left;
+}
+
+.like-btn {
+  position: relative;
+  top:-10px;
+  left:-10px;
+}
+
+.post-bar {
+  position:static;
+  margin-top:5px;
+  margin-bottom:5px;
+}
+.content {
+  padding-bottom:10px;
+  border-bottom: 1px solid #e8e8e8;
+  clear:both;
+
+}
+
+.delete-btn {
+  position:relative;
+  top:5px;
 }
