--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,5 +1,5 @@
-<li>
-  <h5 class="author"><%= link_to micropost.user.name, user_path(micropost.user) %> posted
+<li id="<%= micropost.id %>">
+  <h5><%= link_to micropost.user.name, user_path(micropost.user) %> posted
     <% if not micropost.user == micropost.wall.user %>
         on <%= link_to micropost.wall.user.name + "'s ", user_path(micropost.wall.user) %>wall
     <% end  %>
@@ -9,9 +9,14 @@
   </h5>
   <span class="content"><%= micropost.content %></span>
 
-  <div>
+  <div class="post-bar">
+    <div class="like like-btn" id="<%= micropost.id %>_like_form">
+        <%= render 'likes/like_button', object: micropost %>
+    </div>
+    <div class="like" id="<%= micropost.id %>_likes">
+      Likes: <%= micropost.likes.count ? micropost.likes.count : 0 %>
+    </div>
     <%= link_to "Comments (#{micropost.comments.count})", micropost_path(micropost) %>
-
     <span class="timestamp pull-right">
     Posted <%= time_ago_in_words(micropost.created_at) %> ago.
    </span>
