--- a/app/views/shared/_delete_micropost.html.erb
+++ b/app/views/shared/_delete_micropost.html.erb
@@ -1,5 +1,5 @@
 <% if current_user?(object.user) %>
-    <%= link_to "delete", object, class: "btn btn-danger btn-mini pull-right", method: :delete,
+    <%= link_to "delete", object, class: "btn btn-danger btn-mini pull-right delete-btn", method: :delete,
                 data: { confirm: "You sure?" },
                 title: object.content %>
 <% end %>
