some final changes and note to instructor added

--- a/app/views/shared/_list_friends.html.erb
+++ b/app/views/shared/_list_friends.html.erb
@@ -4,6 +4,7 @@
     <% else %>
         Your Friends
     <% end %>
+    (<%= @friends.count ? @friends.count: 0 %>)
   </h3>
   <hr>
   <% if @friends.any? %>
