--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -241,6 +241,7 @@ a {
   margin-bottom:5px;
 }
 .content {
+  padding-top:5px;
   padding-bottom:10px;
   border-bottom: 1px solid #e8e8e8;
   clear:both;
