--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -48,14 +48,14 @@
         <%= f.label :email %>
         <%= f.text_field :email, class: "mid-field" %>
 
-        <%= f.label "Current Password" %>
-        <%= f.password_field :current_password, class: "mid-field" %>
-
-        <%= f.label :password, "New Password" %>
+        <%= f.label :password, "New Password (minimum 6 characters)" %>
         <%= f.password_field :password, class: "mid-field" %>
 
         <%= f.label :password_confirmation, "Confirm New Password" %>
         <%= f.password_field :password_confirmation, class: "mid-field" %>
+
+        <%= f.label "Current Password" %>
+        <%= f.password_field :current_password, class: "mid-field" %>
         <br>
         <%= f.submit "Save changes", class: "btn btn-primary" %>
     <% end %>
