--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,10 +15,10 @@
         <%= f.label :email %>
         <%= f.text_field :email %>
 
-        <%= f.label :password %>
+        <%= f.label :password, "Password (minimum 6 characters)" %>
         <%= f.password_field :password %>
 
-        <%= f.label :password_confirmation, "Confirmation" %>
+        <%= f.label :password_confirmation, "Confirm Password" %>
         <%= f.password_field :password_confirmation %>
 
         <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
